--- a/composer.json
+++ b/composer.json
@@ -15,20 +15,26 @@
             "Tests\\Support\\": "tests/_support/"
         }
     },
+
     "authors": [
         {
             "name": "Ian Otieno",
             "email": "ochiengian383@gmail.com"
         }
     ],
+
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "require-dev": {
-        "pestphp/pest": "^4.3"
-    },
     "config": {
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.5"
+    },
+    "require": {
+        "fakerphp/faker": "^1.24",
+        "codeigniter4/framework": "^4.7"
     }
 }
