--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,25 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Jengo\\Base\\": "src/"
-        }
+            "Jengo\\Base\\": "src/",
+            "Jengo\\Base\\Vite\\": "src/Vite/"
+        },
+        "files": [
+            "src/functions.php"
+        ]
     },
-
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/",
             "Tests\\Support\\": "tests/_support/"
         }
     },
-
     "authors": [
         {
             "name": "Ian Otieno",
             "email": "ochiengian383@gmail.com"
         }
     ],
-
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
@@ -35,6 +36,10 @@
     },
     "require": {
         "fakerphp/faker": "^1.24",
-        "codeigniter4/framework": "^4.7"
+        "codeigniter4/framework": "^4.7",
+        "mindplay/php-vite": "^1.1"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
